--- a/cover.html
+++ b/cover.html
@@ -8,6 +8,27 @@
 </head>
 
 <table align="left" cellpadding="10">
+	<!--
+	<tr>
+		<td>
+			&#9679; 『』- <br>&nbsp;&nbsp;
+			作詞：／作曲：
+		</td>
+		<td><audio controls>
+			<source src="audios/.mp3" type="audio/mpeg">
+		</audio> <a href=""><img src="images/Download.png" height="15"></a></td>
+	</tr>
+	-->
+
+	<tr>
+		<td>
+			&#9679; 『お祭りマンボ』- 美空ひばり<br>&nbsp;&nbsp;
+			作詞／作曲：原六朗
+		</td>
+		<td><audio controls>
+			<source src="audios/お祭りマンボ.mp3" type="audio/mpeg">
+		</audio> <a href="https://seafile.zfn.uni-bremen.de/f/ae1fd0fbca0d407aa5a5/?dl=1"><img src="images/Download.png" height="15"></a></td>
+	</tr>
 	<tr>
 		<td>
 			&#9679; 『潮来笠』- 橋幸夫<br>&nbsp;&nbsp;
@@ -119,6 +140,15 @@
 		<td><audio controls>
 			<source src="audios/あこがれの郵便馬車.mp3" type="audio/mpeg">
 		</audio> <a href="https://seafile.zfn.uni-bremen.de/f/428b4c9eb6274fb98dba/?dl=1"><img src="images/Download.png" height="15"></a></td>
+	</tr>
+	<tr>
+		<td>
+			&#9679; 『糸』- 中島みゆき<br>&nbsp;&nbsp;
+			作詞／作曲：中島みゆき
+		</td>
+		<td><audio controls>
+			<source src="audios/糸.mp3" type="audio/mpeg">
+		</audio> <a href="https://seafile.zfn.uni-bremen.de/f/e0191e1a32f545f591cf/?dl=1"><img src="images/Download.png" height="15"></a></td>
 	</tr>
 	<tr>
 		<td>
@@ -292,15 +322,4 @@
 			<source src="audios/浪花節だよ人生は.mp3" type="audio/mpeg">
 		</audio> <a href="https://seafile.zfn.uni-bremen.de/f/aa3360e5b60d4389abc3/?dl=1"><img src="images/Download.png" height="15"></a></td>
 	</tr>
-	<!--
-	<tr>
-		<td>
-			&#9679; 『』- <br>&nbsp;&nbsp;
-			作詞：／作曲：
-		</td>
-		<td><audio controls>
-			<source src="audios/.mp3" type="audio/mpeg">
-		</audio> <a href=""><img src="images/Download.png" height="15"></a></td>
-	</tr>
-	-->
 </table>
