--- a/enkas/な.html
+++ b/enkas/な.html
@@ -66,7 +66,7 @@ on the beach<br>
 しずくが砂に舞い<br>
 言葉もないままに　あきらめの夏<br>
 <br>
-Darlin' Can't.You See?<br>
+Darlin' Can't You See?<br>
 I'll Try To Make It Shine<br>
 Darlin' Be With Me<br>
 Let's Get To Be So Fine<br>
@@ -84,7 +84,7 @@ Pacific Hotel<br>
 意味シンなシャワーで<br>
 恋人も泣いてる　あきらめの夏<br>
 <br>
-Darlin' Can't.You See?<br>
+Darlin' Can't You See?<br>
 I'll Try To Make It Shine<br>
 Darlin' Be With Me<br>
 Let's Get To Be So Fine<br>
