--- a/indexenka.html
+++ b/indexenka.html
@@ -55,6 +55,7 @@
 		<a href="enkas/english.html">English</a><br>
 		<a href="enkas/Français.html">Français</a><br>
 		<br>
+		<a href="https://seafile.zfn.uni-bremen.de/d/c15a5f93d7974c4bafeb/" target="_blank" rel="noopener noreferrer"><b>Video</b></a><br>
 		<a href="index.html">Homepage</a><br>
 		<a href="indexcn.html">回主页</a><br>
 	</h1></body>
