--- a/studentscn.html
+++ b/studentscn.html
@@ -109,7 +109,7 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Female.png" width="150"></a><br>
+					<img src="images/students/Isabel_de_Almeida_Curioso.jpg" width="150"></a><br>
 					<b>Isabel de Almeida Curioso（葡）</i></b>
 				</td>
 				<td>
@@ -281,7 +281,7 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Male.png" width="150"></a><br>
+					<img src="images/students/Ciwan_Gülpinar.jpg" width="150"></a><br>
 					<b>Ciwan Gülpinar（德；库尔德）</b>
 				</td>
 				<td>
