--- a/students.html
+++ b/students.html
@@ -109,7 +109,7 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Female.png" width="150"></a><br>
+					<img src="images/students/Isabel_de_Almeida_Curioso.jpg" width="150"></a><br>
 					<b>Isabel de Almeida Curioso</i></b>
 				</td>
 				<td>
@@ -282,7 +282,7 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Male.png" width="150"></a><br>
+					<img src="images/students/Ciwan_Gülpinar.jpg" width="150"></a><br>
 					<b>Ciwan Gülpinar</b>
 				</td>
 				<td>
