--- a/students.html
+++ b/students.html
@@ -32,7 +32,7 @@
 			<tr>
 				<td align="center">
 					<img src="images/students/Yale_Hartmann.jpeg" width="150"></a><br>
-					@<b>Yale Hartmann</b>
+					&copy;<b>Yale Hartmann</b>
 				</td>
 				<td>
 					Research assistant 2018 — 2020<br>
@@ -47,56 +47,63 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Anindya_Chowdhury.png" width="150"></a><br>
-					<b>Anindya Chowdhury</b>
+					<img src="images/students/Anindya_Chowdhury.jpg" width="150"></a><br>
+					&copy;<b>Anindya Chowdhury</b>
 				</td>
 				<td>
 					Research assistant 2019<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Statistical models<br>
+					<br><br>
+					&rarr; Data Analyst @ Fujifilm Europe, Ratingen
+
 				</td>
 			</tr>
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Male.png" width="150"></a><br>
-					<b>Lennard Mai</b>
+					<img src="images/students/Lennard_Mai.jpg" width="150"></a><br>
+					&copy;<b>Lennard Mai</b>
 				</td>
 				<td>
 					Bachelor thesis 2019, <i>Bremen, Germany</i><br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Automatic segmentation of motion data<br>
+					<br><br>					
+					&rarr; Junior Data Engineer @ hmmh, Bremen
 				</td>
 			</tr>
 
 			<tr>
 				<td align="center">
 					<img src="images/students/Timo_Urban.png" width="150"></a><br>
-					@<b>Timo Urban</b>
+					&copy;<b>Timo Urban</b>
 				</td>
 				<td>
 					Bachelor thesis 2019, <i>Bremen, Germany</i> (full score)<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Android APP development<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Biosignal acquisition
 					<br><br>
-					&rarr; Software engineer @ Hamburg
+					&rarr; Software engineer @ TK, Hamburg
 				</td>
 			</tr>
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Male.png" width="150"></a><br>
-					<b>Kilian Lüdemann</b>
+					<img src="images/students/Kilian_Lüdemann.jpg" width="150"></a><br>
+					&copy;<b>Kilian Lüdemann</b>
 				</td>
 				<td>
 					Bachelor thesis 2021, <i>Bremen, Germany</i><br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Fall detection based on infrared videos<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; RNN
+					<br><br>
+					&rarr;  Software engineer @ RealCore Group, Essen
 				</td>
 			</tr>
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Tobias_Dellert.png" width="150"></a><br>
-					<b>Tobias Dellert</b>
+					<img src="images/students/Tobias_Dellert.jpg" width="150"></a><br>
+					&copy;<b>Tobias Dellert</b>
 				</td>
 				<td>
 					Bacheler thesis 2022, <i>Tbilisi, Georgia</i><br>
@@ -104,13 +111,13 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Heart rate variability<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Inertial sensors
 					<br><br>
-					&rarr; Engineer @ Georgia
+					&rarr; Data Engineer @ WearHealth, Bremen
 				</td>
 
 			<tr>
 				<td align="center">
 					<img src="images/students/Isabel_de_Almeida_Curioso.jpg" width="150"></a><br>
-					<b>Isabel de Almeida Curioso</i></b>
+					<b>Isabel de Almeida Curioso<br>&copy;NOVA FCT (Twitter)</b>
 				</td>
 				<td>
 					Master thesis 2022, <i>Lisbon, Portugal</i> (20/20, best of the year)<br>
@@ -118,6 +125,19 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Reliable AI to clinical contexts
 					<br><br>
 					&rarr; Researcher @ Portugal
+				</td>
+			</tr>
+
+			<tr>
+				<td align="center">
+					<img src="images/students/Shiyao_Zhang.jpg" width="150"></a><br>
+					&copy;<b>Shiyao Zhang</b>
+				</td>
+				<td>
+					Research assistant since 2022<br>
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Artifacts during biosignal acquisition<br>
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Real-time ECG signal processing<br>
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Convenor of Hui Liu's research group
 				</td>
 			</tr>
 
@@ -135,32 +155,21 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Shiyao_Zhang.jpg" width="150"></a><br>
-					<b>@Shiyao Zhang</b>
-				</td>
-				<td>
-					Research assistant since 2022<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Artifacts during biosignal acquisition<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Real-time ECG signal processing<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Convenor of Hui Liu's research group
-				</td>
-			</tr>
-
-			<tr>
-				<td align="center">
-					<img src="images/students/Female.png" width="150"></a><br>
-					<b>Wei Wang</b>
+					<img src="images/students/Wei_Wang.png" width="150"></a><br>
+					&copy;<b>Wei Wang</b>
 				</td>
 				<td>
 					Master thesis 2022, <i>Hannover, Germany</i><br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Automatic heart sound segmentation
+					<br><br>
+					&rarr; IT application developer @ Bosch, Eisenach
 				</td>
 			</tr>
 
 			<tr>
 				<td align="center">
 					<img src="images/students/Daniel_Osorio.png" width="150"></a><br>
-					<b>@Daniel Faustino de Noronha Osório</b>
+					&copy;<b>Daniel Faustino de Noronha Osório</b>
 				</td>
 				<td>
 					Ph.D. thesis 2023, <i>Lisbon, Portugal</i><br>
@@ -186,7 +195,7 @@
 			<tr>
 				<td align="center">
 					<img src="images/students/Romina_Razeghi_Oskouei.png" width="150"></a><br>
-					<b>@Romina Razeghi Oskouei</b>
+					&copy;<b>Romina Razeghi Oskouei</b>
 				</td>
 				<td>
 					Research assistant since 2023<br>
@@ -247,8 +256,8 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Hasanur_Jaman_Seam.png" width="150"></a><br>
-					<b>Hasanur Jaman Seam</b>
+					<img src="images/students/Hasanur_Jaman_Seam.jpg" width="150"></a><br>
+					&copy;<b>Hasanur Jaman Seam</b>
 				</td>
 				<td>
 					Graduation research in progress<br>
@@ -270,8 +279,8 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Rakibul_Islam.png" width="150"></a><br>
-					<b>Rakibul Islam</b>
+					<img src="images/students/Rakibul_Islam.jpg" width="150"></a><br>
+					&copy;<b>Rakibul Islam</b>
 				</td>
 				<td>
 					Graduation research in progress<br>
@@ -283,7 +292,7 @@
 			<tr>
 				<td align="center">
 					<img src="images/students/Ciwan_Gülpinar.jpg" width="150"></a><br>
-					<b>Ciwan Gülpinar</b>
+					&copy;<b>Ciwan Gülpinar</b>
 				</td>
 				<td>
 					Graduation research in progress<br>
@@ -294,7 +303,7 @@
 			<tr>
 				<td align="center">
 					<img src="images/students/Thorben_Lorenzen.png" width="150"></a><br>
-					<b>Thorben Lorenzen</b>
+					&copy;<b>Thorben Lorenzen</b>
 				</td>
 				<td>
 					Graduation research in progress<br>
@@ -306,7 +315,7 @@
 			<tr>
 				<td align="center">
 					<img src="images/students/Leon_Flaack.jpg" width="150"></a><br>
-					<b>Leon Flaack</b>
+					&copy;<b>Leon Flaack</b>
 				</td>
 				<td>
 					Graduation research in progress<br>
