--- a/studentscn.html
+++ b/studentscn.html
@@ -32,7 +32,7 @@
 			<tr>
 				<td align="center">
 					<img src="images/students/Yale_Hartmann.jpeg" width="150"></a><br>
-					@<b>Yale Hartmann（德）</b>
+					&copy;<b>Yale Hartmann（德）</b>
 				</td>
 				<td>
 					科研助理 2018 — 2020<br>
@@ -47,56 +47,62 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Anindya_Chowdhury.png" width="150"></a><br>
-					<b>Anindya Chowdhury（孟）</b>
+					<img src="images/students/Anindya_Chowdhury.jpg" width="150"></a><br>
+					&copy;<b>Anindya Chowdhury（孟）</b>
 				</td>
 				<td>
 					科研助理 2019<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 数据统计模型<br>
+					<br><br>
+					&rarr; 数据分析师 @ 富士胶片欧洲（拉廷根）
 				</td>
 			</tr>
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Male.png" width="150"></a><br>
-					<b>Lennard Mai（德）</b>
+					<img src="images/students/Lennard_Mai.jpg" width="150"></a><br>
+					&copy;<b>Lennard Mai（德）</b>
 				</td>
 				<td>
 					本科毕设 2019，<i>德国不来梅</i><br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 运动数据自动分割<br>
+					<br><br>
+					&rarr; 数据分析师 @ hmmh（不来梅）
 				</td>
 			</tr>
 
 			<tr>
 				<td align="center">
 					<img src="images/students/Timo_Urban.png" width="150"></a><br>
-					@<b>Timo Urban（德）</b>
+					&copy;<b>Timo Urban（德）</b>
 				</td>
 				<td>
 					本科毕设 2019，<i>德国不来梅</i>（满分）<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 安卓应用程序开发<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 移动端多模生物信号采集
 					<br><br>
-					&rarr; 软件工程师 @ 汉堡
+					&rarr; 软件工程师 @ TK保险（汉堡）
 				</td>
 			</tr>
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Male.png" width="150"></a><br>
-					<b>Kilian Lüdemann（德）</b>
+					<img src="images/students/Kilian_Lüdemann.jpg" width="150"></a><br>
+					&copy;<b>Kilian Lüdemann（德）</b>
 				</td>
 				<td>
 					本科毕设 2021，<i>德国不来梅</i><br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 基于红外视频的摔倒识别<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; RNN
-				</td>
+					<br><br>
+					&rarr;  软件工程师 @ RealCore集团（埃森）
+					</td>
 			</tr>
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Tobias_Dellert.png" width="150"></a><br>
-					<b>Tobias Dellert（德；格）</b>
+					<img src="images/students/Tobias_Dellert.jpg" width="150"></a><br>
+					&copy;<b>Tobias Dellert（德）</b>
 				</td>
 				<td>
 					本科毕设 2022，<i>格鲁吉亚第比利斯</i><br>
@@ -104,13 +110,13 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 心率变异性<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 惯性传感器
 					<br><br>
-					&rarr; 工程师 @ 格鲁吉亚
+					&rarr; 数据工程师 @ WearHealth（不来梅）
 				</td>
 
 			<tr>
 				<td align="center">
 					<img src="images/students/Isabel_de_Almeida_Curioso.jpg" width="150"></a><br>
-					<b>Isabel de Almeida Curioso（葡）</i></b>
+					<b>Isabel de Almeida Curioso（葡）<br>&copy;NOVA FCT (Twitter)</b>
 				</td>
 				<td>
 					硕士毕设 2022，<i>葡萄牙里斯本</i>（满分（20），极难获得）<br>
@@ -118,6 +124,18 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 临床环境下可靠的人工智能
 					<br><br>
 					&rarr; 研究员 @ 葡萄牙
+				</td>
+			</tr>
+
+			<tr>
+				<td align="center">
+					<img src="images/students/Shiyao_Zhang.jpg" width="150"></a><br>
+					&copy;<b>张诗瑶</b>
+				</td>
+				<td>
+					科研助理和研究小组召集人 自2022<br>
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 生物信号采集过程中的伪影识别<br>
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 实时心电信号处理
 				</td>
 			</tr>
 
@@ -135,31 +153,21 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Shiyao_Zhang.jpg" width="150"></a><br>
-					<b>@张诗瑶</b>
-				</td>
-				<td>
-					科研助理和研究小组召集人 自2022<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 生物信号采集过程中的伪影识别<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 实时心电信号处理
-				</td>
-			</tr>
-
-			<tr>
-				<td align="center">
-					<img src="images/students/Female.png" width="150"></a><br>
-					<b>王薇</b>
+					<img src="images/students/Wei_Wang.png" width="150"></a><br>
+					&copy;<b>王薇</b>
 				</td>
 				<td>
 					硕士毕设 2022，<i>德国汉诺威</i><br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 自动心音信号分割
+					<br><br>
+					&rarr; IT应用开发师 @ 博世（爱森纳赫）
 				</td>
 			</tr>
 
 			<tr>
 				<td align="center">
 					<img src="images/students/Daniel_Osorio.png" width="150"></a><br>
-					<b>@Daniel Faustino de Noronha Osório（葡）</b>
+					&copy;<b>Daniel Faustino de Noronha Osório（葡）</b>
 				</td>
 				<td>
 					博士论文 2023，<i>葡萄牙里斯本</i><br>
@@ -185,7 +193,7 @@
 			<tr>
 				<td align="center">
 					<img src="images/students/Romina_Razeghi_Oskouei.png" width="150"></a><br>
-					<b>@Romina Razeghi Oskouei（伊朗）</b>
+					&copy;<b>Romina Razeghi Oskouei（伊朗）</b>
 				</td>
 				<td>
 					科研助理 自2023<br>
@@ -246,8 +254,8 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Hasanur_Jaman_Seam.png" width="150"></a><br>
-					<b>Hasanur Jaman Seam（孟）</b>
+					<img src="images/students/Hasanur_Jaman_Seam.jpg" width="150"></a><br>
+					&copy;<b>Hasanur Jaman Seam（孟）</b>
 				</td>
 				<td>
 					毕设进行<br>
@@ -269,8 +277,8 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Rakibul_Islam.png" width="150"></a><br>
-					<b>Rakibul Islam（孟）</b>
+					<img src="images/students/Rakibul_Islam.jpg" width="150"></a><br>
+					&copy;<b>Rakibul Islam（孟）</b>
 				</td>
 				<td>
 					毕设进行<br>
@@ -282,7 +290,7 @@
 			<tr>
 				<td align="center">
 					<img src="images/students/Ciwan_Gülpinar.jpg" width="150"></a><br>
-					<b>Ciwan Gülpinar（德；库尔德）</b>
+					&copy;<b>Ciwan Gülpinar（德；库尔德）</b>
 				</td>
 				<td>
 					毕设进行<br>
@@ -293,7 +301,7 @@
 			<tr>
 				<td align="center">
 					<img src="images/students/Thorben_Lorenzen.png" width="150"></a><br>
-					<b>Thorben Lorenzen（德）</b>
+					&copy;<b>Thorben Lorenzen（德）</b>
 				</td>
 				<td>
 					毕设进行<br>
@@ -305,7 +313,7 @@
 			<tr>
 				<td align="center">
 					<img src="images/students/Leon_Flaack.jpg" width="150"></a><br>
-					<b>Leon Flaack（德）</b>
+					&copy;<b>Leon Flaack（德）</b>
 				</td>
 				<td>
 					毕设进行<br>
