--- a/cover.html
+++ b/cover.html
@@ -234,6 +234,15 @@
 	</tr>
 	<tr>
 		<td>
+			&#9679; 『ありがとうあなた』- 山口百恵<br>&nbsp;&nbsp;
+			作詞：千家和也／作曲：都倉俊一
+		</td>
+		<td><audio controls>
+			<source src="audios/ありがとうあなた.mp3" type="audio/mpeg">
+		</audio> <a href="https://seafile.zfn.uni-bremen.de/f/aa1618207a3e4ecbb0a3/?dl=1"><img src="images/Download.png" height="15"></a></td>
+	</tr>
+	<tr>
+		<td>
 			&#9679; 『鳥取砂丘』- 水森かおり<br>&nbsp;&nbsp;
 			作詞：木下龍太郎／作曲：弦哲也
 		</td>
