--- a/studentscn.html
+++ b/studentscn.html
@@ -36,8 +36,8 @@
 				</td>
 				<td>
 					科研助理 2018 — 2020<br>
-					本科毕设 2019，<i>德国不来梅</i>（满分） <br>
-					硕士毕设 2020，<i>德国不来梅</i>（满分）<br>
+					本科毕设 2019 @ 德国不来梅（满分） <br>
+					硕士毕设 2020 @ 德国不来梅（满分）<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 人体动作识别<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 特征空间降维
 					<br><br>					
@@ -64,7 +64,7 @@
 					&copy;<b>Lennard Mai（德）</b>
 				</td>
 				<td>
-					本科毕设 2019，<i>德国不来梅</i><br>
+					本科毕设 2019 @ 德国不来梅<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 运动数据自动分割<br>
 					<br><br>
 					&rarr; 数据分析师 @ hmmh（不来梅）
@@ -77,7 +77,7 @@
 					&copy;<b>Timo Urban（德）</b>
 				</td>
 				<td>
-					本科毕设 2019，<i>德国不来梅</i>（满分）<br>
+					本科毕设 2019 @ 德国不来梅（满分）<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 安卓应用程序开发<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 移动端多模生物信号采集
 					<br><br>
@@ -91,7 +91,7 @@
 					&copy;<b>Kilian Lüdemann（德）</b>
 				</td>
 				<td>
-					本科毕设 2021，<i>德国不来梅</i><br>
+					本科毕设 2021 @ 德国不来梅<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 基于红外视频的摔倒识别<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; RNN
 					<br><br>
@@ -105,7 +105,7 @@
 					&copy;<b>Tobias Dellert（德）</b>
 				</td>
 				<td>
-					本科毕设 2022，<i>格鲁吉亚第比利斯</i><br>
+					本科毕设 2022 @ 格鲁吉亚第比利斯<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 实时工作负载监控<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 心率变异性<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 惯性传感器
@@ -119,7 +119,7 @@
 					<b>Isabel de Almeida Curioso（葡）<br>&copy;NOVA FCT (Twitter)</b>
 				</td>
 				<td>
-					硕士毕设 2022，<i>葡萄牙里斯本</i>（满分（20），极难获得）<br>
+					硕士毕设 2022 @ 葡萄牙里斯本（满分（20），极难获得）<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 丢失数据恢复<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 临床环境下可靠的人工智能
 					<br><br>
@@ -145,7 +145,7 @@
 					<b>Steffen Lahrberg（德）</b>
 				</td>
 				<td>
-					本科毕设 2022，<i>德国不来梅</i>（满分）<br>
+					本科毕设 2022 @ 德国不来梅（满分）<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 运动方向区分<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 跨信道特征
 				</td>
@@ -157,7 +157,7 @@
 					&copy;<b>王薇</b>
 				</td>
 				<td>
-					硕士毕设 2022，<i>德国汉诺威</i><br>
+					硕士毕设 2022 @ 德国汉诺威<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 自动心音信号分割
 					<br><br>
 					&rarr; IT应用开发师 @ 博世（爱森纳赫）
@@ -170,7 +170,7 @@
 					&copy;<b>Daniel Faustino de Noronha Osório（葡）</b>
 				</td>
 				<td>
-					博士论文 2023，<i>葡萄牙里斯本</i><br>
+					博士论文 2023 @ 葡萄牙里斯本<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 普适遥感<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 心血管疾病评估
 					<br><br>
@@ -180,7 +180,7 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Male.png" width="150"></a><br>
+					<img src="images/students/Jonas_Boule.jpg" width="150"></a><br>
 					<b>Jonas Boule（德）</b>
 				</td>
 				<td>
@@ -221,7 +221,7 @@
 				</td>
 				<td>
 					访问学生研究员<br>
-					本科毕设 2023，<i>印度果阿 / 德国不来梅</i>（A等）<br>
+					本科毕设 2023 @ 印度果阿 / 德国不来梅（A等）<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 面部肌电信号处理<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 实时表情识别
 					<br><br>
@@ -324,8 +324,8 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Female.png" width="150"></a><br>
-					<b>陈久盟</b>
+					<img src="images/students/Jiumeng_Chen.jpg" width="150"></a><br>
+					@<b>陈久盟</b>
 				</td>
 				<td>
 					毕设进行<br>
@@ -363,7 +363,7 @@
 					<b></b>
 				</td>
 				<td>
-					毕设 202，<i>德国不来梅</i><br>
+					毕设 202 @ 德国不来梅<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 
 					<br><br>
 					&rarr; 
