--- a/students.html
+++ b/students.html
@@ -36,8 +36,8 @@
 				</td>
 				<td>
 					Research assistant 2018 — 2020<br>
-					Bachelor thesis 2019, <i>Bremen, Germany</i> (full score)<br>
-					Master thesis 2020, <i>Bremen, Germany</i> (full score)<br>
+					Bachelor thesis 2019 @ Bremen, Germany (full score)<br>
+					Master thesis 2020 @ Bremen, Germany (full score)<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Human activity recogntion<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Feature dimensionality study
 					<br><br>					
@@ -65,7 +65,7 @@
 					&copy;<b>Lennard Mai</b>
 				</td>
 				<td>
-					Bachelor thesis 2019, <i>Bremen, Germany</i><br>
+					Bachelor thesis 2019 @ Bremen, Germany<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Automatic segmentation of motion data<br>
 					<br><br>					
 					&rarr; Junior Data Engineer @ hmmh, Bremen
@@ -78,7 +78,7 @@
 					&copy;<b>Timo Urban</b>
 				</td>
 				<td>
-					Bachelor thesis 2019, <i>Bremen, Germany</i> (full score)<br>
+					Bachelor thesis 2019 @ Bremen, Germany (full score)<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Android APP development<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Biosignal acquisition
 					<br><br>
@@ -92,7 +92,7 @@
 					&copy;<b>Kilian Lüdemann</b>
 				</td>
 				<td>
-					Bachelor thesis 2021, <i>Bremen, Germany</i><br>
+					Bachelor thesis 2021 @ Bremen, Germany<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Fall detection based on infrared videos<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; RNN
 					<br><br>
@@ -106,7 +106,7 @@
 					&copy;<b>Tobias Dellert</b>
 				</td>
 				<td>
-					Bacheler thesis 2022, <i>Tbilisi, Georgia</i><br>
+					Bacheler thesis 2022 @ Tbilisi, Georgia<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Real-time workload monitoring<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Heart rate variability<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Inertial sensors
@@ -120,7 +120,7 @@
 					<b>Isabel de Almeida Curioso<br>&copy;NOVA FCT (Twitter)</b>
 				</td>
 				<td>
-					Master thesis 2022, <i>Lisbon, Portugal</i> (20/20, best of the year)<br>
+					Master thesis 2022 @ Lisbon, Portugal (20/20, best of the year)<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Missing data restoration<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Reliable AI to clinical contexts
 					<br><br>
@@ -147,7 +147,7 @@
 					<b>Steffen Lahrberg</b>
 				</td>
 				<td>
-					Bachelor thesis 2022, <i>Bremen, Germany</i> (full score)<br>
+					Bachelor thesis 2022 @ Bremen, Germany (full score)<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Motion direction distinguishment<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Cross-channel features
 				</td>
@@ -159,7 +159,7 @@
 					&copy;<b>Wei Wang</b>
 				</td>
 				<td>
-					Master thesis 2022, <i>Hannover, Germany</i><br>
+					Master thesis 2022 @ Hannover, Germany<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Automatic heart sound segmentation
 					<br><br>
 					&rarr; IT application developer @ Bosch, Eisenach
@@ -172,7 +172,7 @@
 					&copy;<b>Daniel Faustino de Noronha Osório</b>
 				</td>
 				<td>
-					Ph.D. thesis 2023, <i>Lisbon, Portugal</i><br>
+					Ph.D. thesis 2023 @ Lisbon, Portugal<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Pervasive and remote sensing<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Cardiovascular disease assessment
 					<br><br>
@@ -182,7 +182,7 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Male.png" width="150"></a><br>
+					<img src="images/students/Jonas_Boule.jpg" width="150"></a><br>
 					<b>Jonas Boule</b>
 				</td>
 				<td>
@@ -223,7 +223,7 @@
 				</td>
 				<td>
 					Guest research scholar<br>
-					Bachelor thesis 2023, <i>Goa, India / Bremen, Germany</i> (grade A)<br>
+					Bachelor thesis 2023 @ Goa, India / Bremen, Germany (grade A)<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; fEMG signal processing<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Real-time facial action unit recognition
 					<br><br>
@@ -326,8 +326,8 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Female.png" width="150"></a><br>
-					<b>Jiumeng Chen</b>
+					<img src="images/students/Jiumeng_Chen.jpg" width="150"></a><br>
+					@<b>Jiumeng Chen</b>
 				</td>
 				<td>
 					Graduation research in progress<br>
@@ -365,7 +365,7 @@
 					<b></b>
 				</td>
 				<td>
-					Master thesis 202, <i>Bremen, Germany</i><br>
+					Master thesis 202 @ Bremen, Germany<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 
 					<br><br>
 					&rarr; 
