--- a/reviewer.html
+++ b/reviewer.html
@@ -10,7 +10,7 @@
 		</style>
 	</head>
 	<body>
-		<h3>Reviever for</h3>
+		<h2>Hui LIU is a review editor or peer reviewer for</h2>
 		<img src="images/SN.png" height="15" class="pop1"><br>
 		&#9679; Nature Communications<br>
 		&#9679; Computer Sciences<br>
@@ -42,9 +42,12 @@
 		&#9679; Sensors<br>
 		&#9679; Sports<br>
 		&#9679; Sustainability<br>
+		<br>
+		<img src="images/Conference.png" height="30" class="pop1"><br>
+		&#9679; ITG, etc.<br>
+		<img src="images/ACM.png" height="20" class="pop1"><br>
+		&#9679; ICMI, ISWC, AUTOMOTIVEUI, etc.<br>
 		<img src="images/IEEE.png" height="20" class="pop1"><br>
-		&#9679; <img src="images/BHIBSN.png" height="15"> BHI-BSN, etc.<br>
-		<img src="images/ACM.png" height="40" class="pop1"><br>
-		&#9679; ICMI, ISWC, <img src="images/AUTOMOTIVEUI.png" height="15"> AUTOMOTIVEUI, etc.
+		&#9679; BHI-BSN, etc.
 	</body>
 </html>
