--- a/students.html
+++ b/students.html
@@ -207,8 +207,8 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Male.png" width="150"></a><br>
-					<b>Ferdinand Rohlfing</b>
+					<img src="images/students/Ferdinand_Rohlfing.jpg" width="150"></a><br>
+					@<b>Ferdinand Rohlfing</b>
 				</td>
 				<td>
 					Research assistant since 2023<br>
