--- a/studentscn.html
+++ b/studentscn.html
@@ -205,8 +205,8 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Male.png" width="150"></a><br>
-					<b>Ferdinand Rohlfing（德）</b>
+					<img src="images/students/Ferdinand_Rohlfing.jpg" width="150"></a><br>
+					@<b>Ferdinand Rohlfing（德）</b>
 				</td>
 				<td>
 					科研助理 自2023<br>
