--- a/publications.html
+++ b/publications.html
@@ -25,10 +25,11 @@
 	</tr></td>
 	<tr><td>
 		<i>Sensors for Human Activity Recognition.</i> Liu, H., Gamboa, H., and Schultz, T. (2023). MDPI.<br>
-		<a href="" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.svg" height="15"></a>
+		<a href="https://www.semanticscholar.org/paper/Sensors-for-Human-Activity-Recognition/1a319b12e52a8a94de35cfcc16d48661630a86e2" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.amazon.com/Sensors-Human-Activity-Recognition-Hui/dp/3036575545" target="_blank" rel="noopener noreferrer"><img src="images/Amazon.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/372077993_Sensors_for_Human_Activity_Recognition" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.jpg" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=liu2023sensors_har&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.mdpi.com/books/book/7447" target="_blank" rel="noopener noreferrer"><img src="images/MDPIBooks.svg" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3390/books978-3-0365-7555-1" target="_blank" rel="noopener noreferrer">10.3390/books978-3-0365-7555-1</a>
 	</tr></td>
 	<tr><td>
@@ -43,6 +44,16 @@
 
 	<tr><td>
 		<img src="images/Chapter.png" height="25">
+	</tr></td>
+	<tr><td>
+		<i>High-Level Features for Human Activity Recognition and Modeling</i> Hartmann, Y., Liu, H., and Schultz, T. (2023). Biomedical Engineering Systems and Technologies. pringer Nature Switzerland.<br>
+		<a href="" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.svg" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/372525464_High-Level_Features_for_Human_Activity_Recognition_and_Modeling" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.jpg" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.springerprofessional.de/high-level-features-for-human-activity-recognition-and-modeling/25835520" target="_blank" rel="noopener noreferrer"><img src="images/Springer_Professional.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://link.springer.com/chapter/10.1007/978-3-031-38854-5_8" target="_blank" rel="noopener noreferrer"><img src="images/SpringerLink.svg" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=hartmann2023hlf&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1007/978-3-031-38854-5_8" target="_blank" rel="noopener noreferrer"></a>
 	</tr></td>
 	<tr><td>
 		<i>Sensor-Based Human Activity and Behavior Research: Where Advanced Sensing and Recognition Technologies Meet.</i> Liu, H.*, Gamboa, H., and Schultz, T. (2023). Sensors, 23(1):125. MDPI.<br>
@@ -137,7 +148,7 @@
 		<img src="images/Conference.png" height="25">
 	</tr></td>
 	<tr><td>
-		<i>On a Real Real-Time Wearable Human Activity Recognition System.</i> Liu, H.*, Xue, T., and Schultz, T. (2023). In Proceedings of the 16th International Joint Conference on Biomedical Engineering Systems and Technologies - WHC, pages 711-720. INSTICC, SciTePress.<br> 
+		<i>On a Real Real-Time Wearable Human Activity Recognition System.</i> Liu, H., Xue, T., and Schultz, T. (2023). In Proceedings of the 16th International Joint Conference on Biomedical Engineering Systems and Technologies - WHC, pages 711-720. INSTICC, SciTePress.<br> 
 		<a href="https://scholar.google.de/scholar?q=on+a+real+real-time+wearable+human+activity+recognition+system" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.svg" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/369015090_On_a_Real_Real-Time_Wearable_Human_Activity_Recognition_System" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.jpg" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/On-a-Real-Real-Time-Wearable-Human-Activity-System-Liu-Xue/1c0648a61e011468faf3289fcee39ec66b2a4d43" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
@@ -146,7 +157,7 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.5220/0011927700003414" target="_blank" rel="noopener noreferrer">10.5220/0011927700003414</a>
 	</tr></td>
 	<tr><td>
-		<i>Merged Pitch Histogram and Pitch-Duration Histogram.</i> Liu, H., Xue, T., and Schultz, T. (2022). In Proceedings of the 19th International Conference on Signal Processing and Multimedia Applications, pages 32-39. INSTICC, SciTePress.<br>
+		<i>Merged Pitch Histogram and Pitch-Duration Histogram.</i> Liu, H., Xue, T., and Schultz, T. (2022). In Proceedings of the 19th International Conference on Signal Processing and Multimedia Applications, pages 32-39. INSTICC, SciTePress.<br>
 		<a href="https://scholar.google.com/scholar?q=Merged+Pitch+Histograms+and+Pitch-Duration+Histograms" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.svg" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/362055213_Merged_Pitch_Histograms_and_Pitch-duration_Histograms" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.jpg" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Merged-Pitch-Histograms-and-Pitch-duration-Liu-Xue/1e4d841d8e492c2bad6a28b9f7275f5c1f64dd12" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
