--- a/research.html
+++ b/research.html
@@ -40,8 +40,8 @@
 					</td>
 				</tr>
 				<tr><td><b>ORCID (0000-0002-6850-9570)</b></td><td><a href="https://orcid.org/0000-0002-6850-9570" target="_blank" rel="noopener noreferrer"><img src="images/ORCID.png" height="20"></a></td></tr>
-				<tr><td><b>Google Scholar (GyLOsRwAAAAJ)</b></td><td><a href="https://scholar.google.com/citations?user=GyLOsRwAAAAJ" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.svg" height="20"></a></td></tr>
-				<tr><td><b>ResearchGate (Hui-Liu-149)<b></td><td><a href="https://www.researchgate.net/profile/Hui-Liu-149" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.jpg" height="20"></a></td></tr>
+				<tr><td><b>Google Scholar (GyLOsRwAAAAJ)</b></td><td><a href="https://scholar.google.com/citations?user=GyLOsRwAAAAJ" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="20"></a></td></tr>
+				<tr><td><b>ResearchGate (Hui-Liu-149)<b></td><td><a href="https://www.researchgate.net/profile/Hui-Liu-149" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="20"></a></td></tr>
 				<tr><td><b>Scopus (57196004640)<b></td><td><a href="https://www.scopus.com/authid/detail.uri?authorId=57196004640" target="_blank" rel="noopener noreferrer"><img src="images/Scopus.png" height="20" class="pop2"></a></td></tr>
 				<tr><td><b>Sematic Scholar (2146672447)<b></td><td><a href="https://www.semanticscholar.org/author/Hui-Liu/2146672447" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="20" class="pop2"></a></td></tr>
 				<tr><td></td></tr>
