--- a/reviewer.html
+++ b/reviewer.html
@@ -11,20 +11,26 @@
 	</head>
 	<body>
 		<h2>Hui LIU is a review editor or peer reviewer for</h2>
-		<img src="images/SN.png" height="15" class="pop1"><br>
+		<img src="images/Springer.png" height="15" class="pop1"> <img src="images/SN.png" height="15" class="pop1"><br>
 		&#9679; Nature Communications<br>
 		&#9679; Computer Sciences<br>
-		<img src="images/Springer.png" height="25" class="pop1"><br>
 		&#9679; Frontiers of Information Technology and Electronic Engineering<br>
-		<img src="images/Elsevier.png" height="20"> <img src="images/ScienceDirect.png" height="20" class="pop1"><br>
+		<br>
+		<img src="images/Elsevier.png" height="20" class="pop1"> <img src="images/ScienceDirect.png" height="20" class="pop1"><br>
 		&#9679; Biomedical Signal Processing and Control<br>
+		<br>
+		<img src="images/IOPScience.png" height="20"><br>
+		&#9679; Physiological Measurement<br>
+		<br>
 		<img src="images/Frontiers.png" height="25" class="pop1"><br>
 		&#9679; Frontiers in Physilogy<br>
 		&#9679; Frontiers in Medicine<br>
 		&#9679; Frontiers in Big Data<br>
 		&#9679; Frontiers in Artificial Intelligence<br>
+		<br>
 		<img src="images/ISPRS.png" height="25" class="pop1"><br>
-		&#9679; International Journal of Geo-Information<br>
+		&#9679; ISPRS International Journal of Geo-Information<br>
+		<br>
 		<img src="images/MDPI.png" height="25" class="pop1"><br>
 		&#9679; Algorithms<br>
 		&#9679; Applied Sciences<br>
@@ -45,9 +51,11 @@
 		<br>
 		<img src="images/Conference.png" height="30" class="pop1"><br>
 		&#9679; ITG, etc.<br>
-		<img src="images/ACM.png" height="20" class="pop1"><br>
+		<br>
+		<img src="images/ACM.png" height="25" class="pop1"><br>
 		&#9679; ICMI, ISWC, AUTOMOTIVEUI, etc.<br>
-		<img src="images/IEEE.png" height="20" class="pop1"><br>
+		<br>
+		<img src="images/IEEE.png" height="25" class="pop1"><br>
 		&#9679; BHI-BSN, etc.
 	</body>
 </html>
