--- a/research.html
+++ b/research.html
@@ -33,19 +33,30 @@
 			<tr><td><h1 align="left"><span style="text-decoration: overline">Links</span></h1></td></tr>
 			<tr><td><table align="left" cellpadding="15">
 				<tr>
-					<td><b>Homepage @Universität Bremen</b></td>
 					<td>
-						<a href="https://www.uni-bremen.de/en/csl/institute/team/staff/dr-hui-liu" target="_blank" rel="noopener noreferrer"><img src="images/EN.svg" height="20"></a>&nbsp;&nbsp;&nbsp;&nbsp;
-						<a href="https://www.uni-bremen.de/csl/institut/team/mitarbeiter/dr-hui-liu" target="_blank" rel="noopener noreferrer"><img src="images/DE.svg" height="20"></a>
+						<a href="https://www.uni-bremen.de/en/csl/institute/team/staff/dr-hui-liu" target="_blank" rel="noopener noreferrer"><img src="images/EN.svg" height="20" class="pop2"></a>&nbsp;&nbsp;&nbsp;&nbsp;
+						<a href="https://www.uni-bremen.de/csl/institut/team/mitarbeiter/dr-hui-liu" target="_blank" rel="noopener noreferrer"><img src="images/DE.svg" height="20" class="pop2"></a>
+					</td>
+					<td><b>Homepage @Universität Bremen</b></td>
+				</tr>
+				<tr><td><a href="https://orcid.org/0000-0002-6850-9570" target="_blank" rel="noopener noreferrer"><img src="images/ORCID.png" height="20" class="pop2"></a></td><td>0000-0002-6850-9570</td></tr>
+				<tr><td><a href="https://scholar.google.com/citations?user=GyLOsRwAAAAJ" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="20" class="pop2"></a></td><td>GyLOsRwAAAAJ</td></tr>
+				<tr><td><a href="https://www.researchgate.net/profile/Hui-Liu-149" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="20" class="pop2"></a></td><td>Hui-Liu-149</td></tr>
+				<tr><td><a href="https://www.scopus.com/authid/detail.uri?authorId=57196004640" target="_blank" rel="noopener noreferrer"><img src="images/Scopus.png" height="20" class="pop2"></a><td>57196004640</td></td></tr>
+				<tr><td><a href="https://www.semanticscholar.org/author/Hui-Liu/2146672447" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="20" class="pop2"></a></td><td>2146672447</td></tr>
+				<tr><td><a href="https://www.webofscience.com/wos/author/record/ACZ-9903-2022" target="_blank" rel="noopener noreferrer"><img src="images/WoS.png" height="20" class="pop2"></a></td><td>ACZ-9903-2022</td></tr>
+				<tr><td></td></tr>
+				<tr>
+					<td>
+						Your contribution is welcome:<br>
+						<i>Sensors for Human Activity Recognition</i><br>
+						(Vol. II)
+					</td>
+					<td>
+						<a href="https://www.mdpi.com/journal/sensors/special_issues/671TM05M9J" target="_blank" rel="noopener noreferrer"><img src="images/Sensors.png" height="40"></a>
+						&nbsp;&nbsp; <a href="https://www.mdpi.com/journal/sensors/special_issue_flyer_pdf/Sensors_Human_Activity_Recognition/web"><img src="images/Download.png" height="15"></a>
 					</td>
 				</tr>
-				<tr><td><b>ORCID (0000-0002-6850-9570)</b></td><td><a href="https://orcid.org/0000-0002-6850-9570" target="_blank" rel="noopener noreferrer"><img src="images/ORCID.png" height="20"></a></td></tr>
-				<tr><td><b>Google Scholar (GyLOsRwAAAAJ)</b></td><td><a href="https://scholar.google.com/citations?user=GyLOsRwAAAAJ" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="20"></a></td></tr>
-				<tr><td><b>ResearchGate (Hui-Liu-149)<b></td><td><a href="https://www.researchgate.net/profile/Hui-Liu-149" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="20"></a></td></tr>
-				<tr><td><b>Scopus (57196004640)<b></td><td><a href="https://www.scopus.com/authid/detail.uri?authorId=57196004640" target="_blank" rel="noopener noreferrer"><img src="images/Scopus.png" height="20" class="pop2"></a></td></tr>
-				<tr><td><b>Sematic Scholar (2146672447)<b></td><td><a href="https://www.semanticscholar.org/author/Hui-Liu/2146672447" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="20" class="pop2"></a></td></tr>
-				<tr><td></td></tr>
-				<tr><td>Your contribution is welcome!</td><td><a href="https://www.mdpi.com/journal/sensors/special_issues/671TM05M9J" target="_blank" rel="noopener noreferrer"><img src="images/Sensors.png" height="40"></a></td><td><b>Special Issue</b> <i>Sensors for Human Activity Recognition</i> (Edition II)</td><td><a href="https://www.mdpi.com/journal/sensors/special_issue_flyer_pdf/Sensors_Human_Activity_Recognition/web"><img src="images/Download.png" height="15"></a></td></tr>
 			</table></td></tr>
 
 			<tr><td></td></tr><tr><td></td></tr>
