--- a/students.html
+++ b/students.html
@@ -25,8 +25,10 @@
 				<img src="images/GE.png" height="40"> 
 				<img src="images/PT.png" height="40"> 
 				<img src="images/CN.png" height="40"> 
+				<img src="images/KD.png" height="40"> 
 				<img src="images/IN.png" height="40"> 
 				<img src="images/IR.png" height="40"> 
+				<img src="images/TR.png" height="40"> 
 			</td></tr>
 
 			<tr>
@@ -338,8 +340,8 @@
 
 			<tr>
 				<td align="center">
-					<img src="images/students/Male.png" width="150"></a><br>
-					<b>Joel Warnken</b>
+					<img src="images/students/Joel_Warnken.jpg" width="150"></a><br>
+					@<b>Joel Warnken</b>
 				</td>
 				<td>
 					Graduation research in progress<br>
@@ -357,7 +359,16 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; To be determined
 				</td>
 			</tr>
-
+			<tr>
+				<td align="center">
+					<img src="images/students/Male.png" width="150"></a><br>
+					<b>Dervis Can Havuc</b>
+				</td>
+				<td>
+					Graduation research in progress<br>
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; To be determined
+				</td>
+			</tr>
 			<!--
 			<tr>
 				<td align="center">
