--- a/studentscn.html
+++ b/studentscn.html
@@ -18,17 +18,17 @@
 			<tr><td align="center" colspan="2">
 				<h1>刘辉的科研小组：指导的科研助理以及毕设学生</h1>
 			</td></tr>
-				
 			<tr><td align="center" colspan="2">
 				<img src="images/DE.svg" height="40"> 
 				<img src="images/BD.png" height="40"> 
 				<img src="images/GE.png" height="40"> 
 				<img src="images/PT.png" height="40"> 
 				<img src="images/CN.png" height="40"> 
+				<img src="images/KD.png" height="40"> 
 				<img src="images/IN.png" height="40"> 
 				<img src="images/IR.png" height="40"> 
+				<img src="images/TR.png" height="40"> 
 			</td></tr>
-
 			<tr>
 				<td align="center">
 					<img src="images/students/Yale_Hartmann.jpeg" width="150"></a><br>
@@ -44,7 +44,6 @@
 					&rarr; 不来梅大学博士在读
 				</td>
 			</tr>
-
 			<tr>
 				<td align="center">
 					<img src="images/students/Anindya_Chowdhury.jpg" width="150"></a><br>
@@ -57,7 +56,6 @@
 					&rarr; 数据分析师 @ 富士胶片欧洲（拉廷根）
 				</td>
 			</tr>
-
 			<tr>
 				<td align="center">
 					<img src="images/students/Lennard_Mai.jpg" width="150"></a><br>
@@ -70,7 +68,6 @@
 					&rarr; 数据分析师 @ hmmh（不来梅）
 				</td>
 			</tr>
-
 			<tr>
 				<td align="center">
 					<img src="images/students/Timo_Urban.png" width="150"></a><br>
@@ -84,7 +81,6 @@
 					&rarr; 软件工程师 @ TK保险（汉堡）
 				</td>
 			</tr>
-
 			<tr>
 				<td align="center">
 					<img src="images/students/Kilian_Lüdemann.jpg" width="150"></a><br>
@@ -98,7 +94,6 @@
 					&rarr;  软件工程师 @ RealCore集团（埃森）
 					</td>
 			</tr>
-
 			<tr>
 				<td align="center">
 					<img src="images/students/Tobias_Dellert.jpg" width="150"></a><br>
@@ -112,7 +107,6 @@
 					<br><br>
 					&rarr; 数据工程师 @ WearHealth（不来梅）
 				</td>
-
 			<tr>
 				<td align="center">
 					<img src="images/students/Isabel_de_Almeida_Curioso.jpg" width="150"></a><br>
@@ -126,7 +120,6 @@
 					&rarr; 研究员 @ 葡萄牙
 				</td>
 			</tr>
-
 			<tr>
 				<td align="center">
 					<img src="images/students/Shiyao_Zhang.jpg" width="150"></a><br>
@@ -138,7 +131,6 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 实时心电信号处理
 				</td>
 			</tr>
-
 			<tr>
 				<td align="center">
 					<img src="images/students/Male.png" width="150"></a><br>
@@ -150,7 +142,6 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 跨信道特征
 				</td>
 			</tr>
-
 			<tr>
 				<td align="center">
 					<img src="images/students/Wei_Wang.png" width="150"></a><br>
@@ -163,7 +154,6 @@
 					&rarr; IT应用开发师 @ 博世（爱森纳赫）
 				</td>
 			</tr>
-
 			<tr>
 				<td align="center">
 					<img src="images/students/Daniel_Osorio.png" width="150"></a><br>
@@ -177,7 +167,6 @@
 					&rarr; 资深工程师 @ PLUX无线生物信号传感器公司
 				</td>
 			</tr>
-
 			<tr>
 				<td align="center">
 					<img src="images/students/Jonas_Boule.jpg" width="150"></a><br>
@@ -189,7 +178,6 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 针对人体动作识别的脑电和惯性数据融合
 				</td>
 			</tr>
-
 			<tr>
 				<td align="center">
 					<img src="images/students/Romina_Razeghi_Oskouei.png" width="150"></a><br>
@@ -202,7 +190,6 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 面部表情单元识别
 				</td>
 			</tr>
-
 			<tr>
 				<td align="center">
 					<img src="images/students/Ferdinand_Rohlfing.jpg" width="150"></a><br>
@@ -213,7 +200,6 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 基于肌电的表情识别人工智能
 				</td>
 			</tr>
-
 			<tr>
 				<td align="center">
 					<img src="images/students/Anantha_Sripada_Abhinav_Veldanda.png" width="150"></a><br>
@@ -228,7 +214,6 @@
 					&rarr; 工程师 @ 印度
 				</td>
 			</tr>
-
 			<tr>
 				<td align="center">
 					<img src="images/students/Johann_Joachim_Keuneke.png" width="150"></a><br>
@@ -239,7 +224,6 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 智能手机中的多模态传感器融合平台
 				</td>
 			</tr>
-
 			<tr>
 				<td align="center">
 					<img src="images/students/Daniel_Ott.png" width="150"></a><br>
@@ -251,7 +235,6 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 演唱辅助的界面设计
 				</td>
 			</tr>
-
 			<tr>
 				<td align="center">
 					<img src="images/students/Hasanur_Jaman_Seam.jpg" width="150"></a><br>
@@ -262,7 +245,6 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 智能手机作为实时人体动作识别平台
 				</td>
 			</tr>
-
 			<tr>
 				<td align="center">
 					<img src="images/students/Hannes_Wehrmann.png" width="150"></a><br>
@@ -274,7 +256,6 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 人体动作识别的可听化
 				</td>
 			</tr>
-
 			<tr>
 				<td align="center">
 					<img src="images/students/Rakibul_Islam.jpg" width="150"></a><br>
@@ -286,7 +267,6 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 多模态数据的自相似性矩阵
 				</td>
 			</tr>
-
 			<tr>
 				<td align="center">
 					<img src="images/students/Ciwan_Gülpinar.jpg" width="150"></a><br>
@@ -297,7 +277,6 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 元宇宙中生物信号的可视化和交互<br>
 				</td>
 			</tr>
-
 			<tr>
 				<td align="center">
 					<img src="images/students/Thorben_Lorenzen.png" width="150"></a><br>
@@ -309,7 +288,6 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 钢琴自学辅助
 				</td>
 			</tr>
-
 			<tr>
 				<td align="center">
 					<img src="images/students/Leon_Flaack.jpg" width="150"></a><br>
@@ -321,7 +299,6 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 基于符号旋律的自动和弦生成
 				</td>
 			</tr>
-
 			<tr>
 				<td align="center">
 					<img src="images/students/Jiumeng_Chen.jpg" width="150"></a><br>
@@ -333,18 +310,16 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 足部动作识别
 				</td>
 			</tr>
-
 			<tr>
 				<td align="center">
-					<img src="images/students/Male.png" width="150"></a><br>
-					<b>Joel Warnken（德）</b>
+					<img src="images/students/Joel_Warnken.jpg" width="150"></a><br>
+					@<b>Joel Warnken（德）</b>
 				</td>
 				<td>
 					毕设进行<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 歌曲的演唱难度分析
 				</td>
 			</tr>
-
 			<tr>
 				<td align="center">
 					<img src="images/students/Male.png" width="150"></a><br>
@@ -355,7 +330,16 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 课题待定
 				</td>
 			</tr>
-
+			<tr>
+				<td align="center">
+					<img src="images/students/Male.png" width="150"></a><br>
+					<b>Dervis Can Havuc（土）</b>
+				</td>
+				<td>
+					毕设进行<br>
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 课题待定
+				</td>
+			</tr>
 			<!--
 			<tr>
 				<td align="center">
