--- a/publications.html
+++ b/publications.html
@@ -3,7 +3,7 @@
 		html, body, form, fieldset, p, div, h1, h2, h3, h4, h5, h6 {-webkit-text-size-adjust:100%;}
 		body {font: normal 16px Verdana, Arial, sans-serif;}
 		img {transition: transform .5s;}
-		img:hover {transform: scale(3);}
+		img:hover {transform: scale(2.3);}
 	</style>
 </head>
 
@@ -21,7 +21,7 @@
 	</tr></td>
 	-->
 	<tr><td>
-		<img src="images/Book.png" height="25">
+		<img src="images/Book.png" height="25">&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/Dissertation.png" height="25">
 	</tr></td>
 	<tr><td>
 		<i>Sensors for Human Activity Recognition.</i> Liu, H., Gamboa, H., and Schultz, T. (2023). MDPI.<br>
@@ -54,6 +54,7 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://link.springer.com/chapter/10.1007/978-3-031-38854-5_8" target="_blank" rel="noopener noreferrer"><img src="images/SpringerLink.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=hartmann2023hlf&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1007/978-3-031-38854-5_8" target="_blank" rel="noopener noreferrer">10.1007/978-3-031-38854-5_8</a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://link.springer.com/book/10.1007/978-3-642-18472-7" target="_blank" rel="noopener noreferrer"><img src="images/Book.png" height="15" class="pop15"></a>
 	</tr></td>
 	<tr><td>
 		<i>Sensor-Based Human Activity and Behavior Research: Where Advanced Sensing and Recognition Technologies Meet.</i> Liu, H.*, Gamboa, H., and Schultz, T. (2023). Sensors, 23(1):125. MDPI.<br>
@@ -63,9 +64,10 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.mdpi.com/1424-8220/23/1/125" target="_blank" rel="noopener noreferrer"><img src="images/Sensors.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=liu2023sensorseditorial&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3390/s23010125" target="_blank" rel="noopener noreferrer">10.3390/s23010125</a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.mdpi.com/books/book/7447" target="_blank" rel="noopener noreferrer"><img src="images/Book.png" height="15" class="pop15"></a>
 	</tr></td>
 	<tr><td>
-		<i>Hidden Markov Model and Its Application in Human Activity Recognition and Fall Detection: A Review.</i> Xue, T., and Liu, H. (2022). Communications, Signal Processing, and Systems. Springer.<br>
+		<i>Hidden Markov Model and Its Application in Human Activity Recognition and Fall Detection: A Review.</i> Xue, T., and Liu, H. (2022). Communications, Signal Processing, and Systems. Springer, Singapore.<br>
 		<a href="https://scholar.google.com/scholar?q=Hidden+Markov+Model+and+Its+Application+in+Human+Activity+Recognition+and+Fall+Detection%3A+A+Review" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/355198894_Hidden_Markov_Model_and_Its_Application_in_Human_Activity_Recognition_and_Fall_Detection_A_Review" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Hidden-Markov-Model-and-Its-Application-in-Human-A-Xue-Liu/b37df2bc1532b776845dd48e4fa034c47a3dc39c" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
@@ -73,6 +75,20 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://link.springer.com/chapter/10.1007/978-981-19-0390-8_108" target="_blank" rel="noopener noreferrer"><img src="images/SpringerLink.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=xue2021hmm&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1007/978-981-19-0390-8_108" target="_blank" rel="noopener noreferrer">10.1007/978-981-19-0390-8_108</a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://link.springer.com/book/10.1007/978-981-19-0390-8" target="_blank" rel="noopener noreferrer"><img src="images/Book.png" height="15" class="pop15"></a>
+	</tr></td>
+	<tr><td>
+		<i>Bremen Big Data Challenge 2017: Predicting University Cafeteria Load.</i> Weiner, J., Diener, L., Stelter, S., Externest, E., Kühl, S., Herff, C., Putze, F., Schulze, T., Salous, M., Liu, H., Küster, D., and Schultz, T. (2017). KI 2017: Advances in Artificial Intelligence. Springer, Cham.<br>
+		<a href="https://scholar.google.com/scholar?q=Bremen+Big+Data+Challenge+2017%3A+Predicting+University+Cafeteria+Load" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/319890452_Bremen_Big_Data_Challenge_2017_Predicting_University_Cafeteria_Load" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Bremen-Big-Data-Challenge-2017%3A-Predicting-Load-Weiner-Diener/8ba8727f1e80e598619788888ace58effcaa51de" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.springerprofessional.de/bremen-big-data-challenge-2017-predicting-university-cafeteria-l/15121170" target="_blank" rel="noopener noreferrer"><img src="images/Springer_Professional.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://link.springer.com/chapter/10.1007/978-3-319-67190-1_35" target="_blank" rel="noopener noreferrer"><img src="images/SpringerLink.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=Weiner2017&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://bbdc.csl.uni-bremen.de/index.php/2017" target="_blank" rel="noopener noreferrer"><img src="images/BBDC2017.png" height="15" class="pop15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1007/978-3-319-67190-1_35" target="_blank" rel="noopener noreferrer">10.1007/978-3-319-67190-1_35</a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://link.springer.com/book/10.1007/978-3-319-67190-1" target="_blank" rel="noopener noreferrer"><img src="images/Book.png" height="15" class="pop15"></a>
+
 	</tr></td>
 
 	<tr><td>
@@ -251,17 +267,6 @@ s	</tr></td>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://doi.org/10.5220/0006732902620268" target="_blank" rel="noopener noreferrer"><img src="images/SciTePress.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=liu2018harframework&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.5220/0006732902620268" target="_blank" rel="noopener noreferrer">10.5220/0006732902620268</a>
-	</tr></td>
-	<tr><td>
-		<i>Bremen Big Data Challenge 2017: Predicting University Cafeteria Load.</i> Weiner, J., Diener, L., Stelter, S., Externest, E., Kühl, S., Herff, C., Putze, F., Schulze, T., Salous, M., Liu, H., Küster, D., and Schultz, T. (2017). In Proceedings of the 40th Annual German Conference on AI, Dortmund, Germany (KI 2017). Springer International Publishing.<br>
-		<a href="https://scholar.google.com/scholar?q=Bremen+Big+Data+Challenge+2017%3A+Predicting+University+Cafeteria+Load" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/319890452_Bremen_Big_Data_Challenge_2017_Predicting_University_Cafeteria_Load" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Bremen-Big-Data-Challenge-2017%3A-Predicting-Load-Weiner-Diener/8ba8727f1e80e598619788888ace58effcaa51de" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.springerprofessional.de/bremen-big-data-challenge-2017-predicting-university-cafeteria-l/15121170" target="_blank" rel="noopener noreferrer"><img src="images/Springer_Professional.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://link.springer.com/chapter/10.1007/978-3-319-67190-1_35" target="_blank" rel="noopener noreferrer"><img src="images/SpringerLink.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=Weiner2017&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://bbdc.csl.uni-bremen.de/index.php/2017" target="_blank" rel="noopener noreferrer"><img src="images/BBDC2017.png" height="15" class="pop15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1007/978-3-319-67190-1_35" target="_blank" rel="noopener noreferrer">10.1007/978-3-319-67190-1_35</a>
 	</tr></td>
 	<tr><td>
 		<i>Capacity of Cooperative Ad Hoc Networks with Heterogeneous Traffic Patterns.</i> Liu, H., and Wang, X. (2011). In ICC 2011 - IEEE International Conference on Communications, pages 1–5. IEEE.<br>
