--- a/publications.html
+++ b/publications.html
@@ -47,9 +47,9 @@
 	</tr></td>
 	<tr><td>
 		<i>High-Level Features for Human Activity Recognition and Modeling</i> Hartmann, Y., Liu, H., and Schultz, T. (2023). Biomedical Engineering Systems and Technologies. Springer Nature Switzerland.<br>
-		<a href="" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		<a href="https://scholar.google.com/scholar?q=High-Level+Features+for+Human+Activity+Recognition+and+Modeling" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/372525464_High-Level_Features_for_Human_Activity_Recognition_and_Modeling" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/High-Level-Features-for-Human-Activity-Recognition-Hartmann-Liu/d247cc3dbe4ea9673b8f2bebdd62a10eef42d978" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.springerprofessional.de/high-level-features-for-human-activity-recognition-and-modeling/25835520" target="_blank" rel="noopener noreferrer"><img src="images/Springer_Professional.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://link.springer.com/chapter/10.1007/978-3-031-38854-5_8" target="_blank" rel="noopener noreferrer"><img src="images/SpringerLink.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=hartmann2023hlf&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
